# macvdmtool

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rebuild-kc-without-AppleSerialShim.py
src/: main.cpp
